attempt kalman filter

--- a/dallin.ipynb
+++ b/dallin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "\n",
     "import cleaner\n",
     "import filter\n",
+    "from kalman import KalmanFilter\n",
     "\n",
     "wsl = True"
    ]
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -176,133 +177,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter.add_diff_cols(data_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>good_road_left</th>\n",
-       "      <th>regular_road_left</th>\n",
-       "      <th>bad_road_left</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>144036.000000</td>\n",
-       "      <td>144036.000000</td>\n",
-       "      <td>144036.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>0.392798</td>\n",
-       "      <td>0.453387</td>\n",
-       "      <td>0.153816</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.488374</td>\n",
-       "      <td>0.497824</td>\n",
-       "      <td>0.360773</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       good_road_left  regular_road_left  bad_road_left\n",
-       "count   144036.000000      144036.000000  144036.000000\n",
-       "mean         0.392798           0.453387       0.153816\n",
-       "std          0.488374           0.497824       0.360773\n",
-       "min          0.000000           0.000000       0.000000\n",
-       "25%          0.000000           0.000000       0.000000\n",
-       "50%          0.000000           0.000000       0.000000\n",
-       "75%          1.000000           1.000000       0.000000\n",
-       "max          1.000000           1.000000       1.000000"
+       "1458"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_dict[\"train\"][\"labels\"][\"PVS 1\"][[\"good_road_left\", \"regular_road_left\", \"bad_road_left\"]].describe()"
+    "len(data_dict[\"train\"][\"t_gps\"][\"PVS 1\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_z_dash(df, type=\"train\", road=\"good_road_left\"):\n",
     "    \"\"\"\n",
-    "    Builds a 1 column dataset from the given dataframe\n",
+    "    Builds a 1 column dataset from the given dictionary of dataframes\n",
+    "    timestamp\n",
+    "    latitude\n",
+    "    longitude\n",
+    "    elevation\n",
+    "    acc_x_dash_smooth\n",
+    "    acc_y_dash_smooth\n",
+    "    acc_z_dash_smooth\n",
     "\n",
     "    :param df: dataframe\n",
     "    :param type: string\n",
     "\n",
     "    :return: dataframe with only the acc_z_dash column\n",
-    "    :return: list of lengths\n",
     "    \"\"\"\n",
     "    result = None\n",
     "    lengths = []\n",
-    "    for folder in df[type][\"gps_mpu_right\"].keys():\n",
-    "        pvsi = df[type][\"gps_mpu_right\"][folder]\n",
+    "    for folder in df[type][\"gps_mpu_left\"].keys():\n",
+    "        pvsi = df[type][\"gps_mpu_left\"][folder]\n",
     "        labels = df[type][\"labels\"][folder][road]\n",
     "        indices = labels[labels == 1].index\n",
     "\n",
-    "        new_data = pvsi[\"acc_z_dash\"].loc[indices] + pvsi[\"acc_z_dash_smooth\"].loc[indices]\n",
+    "        new_data = pvsi.loc[indices]\n",
     "        lengths.append(len(new_data))\n",
     "\n",
     "        if result is None:\n",
@@ -310,8 +241,30 @@
     "        else:\n",
     "            # append on the same column\n",
     "            result = pd.concat([result, new_data], axis=0)\n",
+    "    \n",
     "\n",
-    "    return result, lengths\n",
+    "\n",
+    "def build_gps_data(df, type=\"train\"):\n",
+    "    \"\"\"\n",
+    "    Builds a 6 column dataset from the given dataframe\n",
+    "\n",
+    "    :param df: dataframe\n",
+    "    :param type: string\n",
+    "\n",
+    "    :return: dataframe with only the acc_z_dash column\n",
+    "    :return: list of lengths\n",
+    "    \"\"\"\n",
+    "    result = {}\n",
+    "    for folder in df[type][\"gps_mpu_left\"].keys():\n",
+    "        pvsi = df[type][\"gps_mpu_left\"][folder][[\"timestamp\", \"meters_latitude\", \"meters_longitude\", \"acc_x_dash_smooth\", \"acc_y_dash_smooth\", \"acc_z_dash_smooth\"]]\n",
+    "        elevation = df[type][\"t_gps\"][folder][[\"timestamp\", \"meters_elevation\"]]\n",
+    "\n",
+    "        # merge the two dataframes on timestamp then remove timestamp\n",
+    "        pvsi = pd.merge(pvsi, elevation, on=\"timestamp\")\n",
+    "        pvsi = pvsi.drop(columns=[\"timestamp\"])\n",
+    "\n",
+    "        result[folder] = pvsi\n",
+    "    return result\n",
     "\n",
     "\n",
     "train_dict = {\n",
@@ -324,7 +277,140 @@
     "    \"good\": build_z_dash(data_dict, type=\"test\", road=\"good_road_left\"),\n",
     "    \"regular\": build_z_dash(data_dict, type=\"test\", road=\"regular_road_left\"),\n",
     "    \"bad\": build_z_dash(data_dict, type=\"test\", road=\"bad_road_left\")\n",
-    "}"
+    "}\n",
+    "\n",
+    "kal_data = build_gps_data(data_dict, type=\"train\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1024,)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kal_data[\"PVS 1\"][\"meters_latitude\"].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kalman Filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(6, 1024)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (6,6) (3,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_5263/957894384.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0mkf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKalmanFilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mF\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m \u001b[0mest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/mnt/c/Users/dalli/source/acme_senior/_projectV3/CarKalmanFilter/kalman.py\u001b[0m in \u001b[0;36mestimate\u001b[0;34m(self, x0, P0, z, return_norms)\u001b[0m\n\u001b[1;32m    102\u001b[0m             \u001b[0;31m# update step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m             \u001b[0myh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mxk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 104\u001b[0;31m             \u001b[0mSk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mpk\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mR\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    105\u001b[0m             \u001b[0mKk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpk\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m             \u001b[0mxk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxk\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mKk\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0myh\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (6,6) (3,3) "
+     ]
+    }
+   ],
+   "source": [
+    "# STATE SPACE (X)\n",
+    "# x pos\n",
+    "# y pos\n",
+    "# z pos\n",
+    "# x vel\n",
+    "# y vel\n",
+    "# z vel\n",
+    "# x acc\n",
+    "# y acc\n",
+    "# z acc\n",
+    "dt = 0.001\n",
+    "\n",
+    "# STATE SPACE PRIME (X')\n",
+    "# x pos + dt * x vel\n",
+    "# y pos + dt * y vel\n",
+    "# z pos + dt * z vel\n",
+    "# x vel + dt * x acc\n",
+    "# y vel + dt * y acc\n",
+    "# z vel + dt * z acc\n",
+    "# x acc\n",
+    "# y acc\n",
+    "# z acc\n",
+    "\n",
+    "# OBSERVATION SPACE (Z)\n",
+    "# x pos + noise\n",
+    "# y pos + noise\n",
+    "# z pos + noise\n",
+    "\n",
+    "\n",
+    "Q = np.eye(9) * 0.1\n",
+    "R = np.eye(3) * 10\n",
+    "\n",
+    "F = np.zeros((9, 9))\n",
+    "for i in range(6):\n",
+    "    F[i, i + 3] = dt\n",
+    "\n",
+    "G = np.zeros((9, 3))\n",
+    "for i in range(3):\n",
+    "    G[i + 6, i] = dt\n",
+    "\n",
+    "H = np.zeros((6, 9))\n",
+    "for i in range(3):\n",
+    "    H[i, i] = dt\n",
+    "    H[i + 3, i + 6] = dt\n",
+    "\n",
+    "# initial state\n",
+    "x0 = np.zeros(9)\n",
+    "P0 = 1e5 * Q\n",
+    "z = kal_data[\"PVS 1\"].to_numpy().T\n",
+    "print(type(z))\n",
+    "print(z.shape)\n",
+    "tsteps = 1000\n",
+    "\n",
+    "# control u\n",
+    "u = np.zeros(3)\n",
+    "\n",
+    "kf = KalmanFilter(F, Q, H, R, G, u)\n",
+    "est = kf.estimate(x0, P0, z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot\n",
+    "plt.figure(figsize=(12,4))\n",
+    "plt.plot(est[0,:], est[1,:], label=\"Estimated Position\")\n",
+    "plt.scatter(z[0,:], z[1,:], label=\"Observations\", s = 1, c=\"g\")\n",
+    "plt.title(\"Observations and estimated position\")\n",
+    "plt.xlabel('x')\n",
+    "plt.ylabel('y')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -338,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +432,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training for good: 0, 1, 2, \n",
+      "Training for good: "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0, 1, 2, \n",
       "Training for regular: 0, 1, 2, \n",
       "Training for bad: 0, 1, 2, "
      ]
@@ -379,16 +472,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for good : 0.7272727272727273\n",
-      "Accuracy for regular : 0.0\n",
-      "Accuracy for bad : 1.0\n"
+      "Accuracy for good : 0.9090909090909091\n",
+      "Accuracy for regular : 0.6\n",
+      "Accuracy for bad : 0.6666666666666666\n"
      ]
     }
    ],
@@ -445,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +548,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_21503/3682354438.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# how many times does predicted_labels switch form 0 to 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mswitches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredicted_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mpredicted_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mpredicted_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mswitches\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_1813/3682354438.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# how many times does predicted_labels switch form 0 to 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mswitches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredicted_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mpredicted_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mpredicted_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mswitches\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'predicted_labels' is not defined"
      ]
     }
