--- a/eliza.ipynb
+++ b/eliza.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "import data_clean as dc \n",
     "from kalman import KalmanFilter\n",
     "from matplotlib.ticker import StrMethodFormatter\n",
-    "from geopy.distance import geodesic\n"
+    "from geopy.distance import geodesic\n",
+    "import cleaner\n"
    ]
   },
   {
@@ -1335,6 +1336,537 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig('figures/kalman_downsize.png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# spectral clustering "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans, SpectralClustering\n",
+    "# load data\n",
+    "parent = '.data/'\n",
+    "data = cleaner.load_data(parent, exclude_test=[\"PVS 7\", \"PVS 8\"], exclude_val=[\"PVS 9\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = data['train']['labels']['PVS 1']\n",
+    "sensor = data['train']['gps_mpu_left']['PVS 1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_master = sensor[['acc_x_dashboard', 'acc_y_dashboard', 'acc_z_dashboard',\n",
+    "       'acc_x_above_suspension', 'acc_y_above_suspension',\n",
+    "       'acc_z_above_suspension', 'acc_x_below_suspension',\n",
+    "       'acc_y_below_suspension', 'acc_z_below_suspension', 'gyro_x_dashboard',\n",
+    "       'gyro_y_dashboard', 'gyro_z_dashboard', 'gyro_x_above_suspension',\n",
+    "       'gyro_y_above_suspension', 'gyro_z_above_suspension',\n",
+    "       'gyro_x_below_suspension', 'gyro_y_below_suspension',\n",
+    "       'gyro_z_below_suspension']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_model(model, X, labels):\n",
+    "    # fit \n",
+    "    model.fit(X)\n",
+    "\n",
+    "    # predict\n",
+    "    model.predict(X)\n",
+    "    y_hat = model.labels_\n",
+    "\n",
+    "    # extract y actual\n",
+    "    labels['cluster_labels'] = y_hat\n",
+    "    ll = pd.get_dummies(labels,columns=['cluster_labels'])\n",
+    "\n",
+    "    # compare accuracies \n",
+    "    for col in ['dirt_road', 'cobblestone_road','asphalt_road']:\n",
+    "        for c in ['cluster_labels_0', 'cluster_labels_1', 'cluster_labels_2']:\n",
+    "            acc = (ll[c] == ll[col]).sum()/len(ll[c])\n",
+    "            print(f'{col} + {c} acc: {acc}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dirt_road + cluster_labels_0 acc: 0.7052195284512205\n",
+      "dirt_road + cluster_labels_1 acc: 0.39951817601155265\n",
+      "dirt_road + cluster_labels_2 acc: 0.7156683051459357\n",
+      "cobblestone_road + cluster_labels_0 acc: 0.5767585881307451\n",
+      "cobblestone_road + cluster_labels_1 acc: 0.4179510677886084\n",
+      "cobblestone_road + cluster_labels_2 acc: 0.5772098642006165\n",
+      "asphalt_road + cluster_labels_0 acc: 0.5214113138382072\n",
+      "asphalt_road + cluster_labels_1 acc: 0.5560276597517287\n",
+      "asphalt_road + cluster_labels_2 acc: 0.5302354966813853\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test vanilla kmeans model \n",
+    "X = X_master.copy()\n",
+    "kmeans = KMeans(3)\n",
+    "fit_model(kmeans, X, labels.copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dirt_road + cluster_labels_0 acc: 0.4021105248542072\n",
+      "dirt_road + cluster_labels_1 acc: 0.7005692863093586\n",
+      "dirt_road + cluster_labels_2 acc: 0.7177173007497917\n",
+      "cobblestone_road + cluster_labels_0 acc: 0.4227992224382116\n",
+      "cobblestone_road + cluster_labels_1 acc: 0.5750485976117745\n",
+      "cobblestone_road + cluster_labels_2 acc: 0.5741460705359622\n",
+      "asphalt_road + cluster_labels_0 acc: 0.5558872535406831\n",
+      "asphalt_road + cluster_labels_1 acc: 0.5199944459872258\n",
+      "asphalt_road + cluster_labels_2 acc: 0.5317272979727853\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bw/hb7ld_394fzb21vx3_dxpyyw0000gn/T/ipykernel_25871/3235640350.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  labels['cluster_labels'] = y_hat\n"
+     ]
+    }
+   ],
+   "source": [
+    "# only taking 10 percent of data\n",
+    "X = X_master[::10]\n",
+    "y = labels[::10]\n",
+    "kmeans = KMeans(3)\n",
+    "fit_model(kmeans, X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_model(labels, y_hat):\n",
+    "    # extract y actual\n",
+    "    labels['cluster_labels'] = y_hat\n",
+    "    ll = pd.get_dummies(labels,columns=['cluster_labels'])\n",
+    "\n",
+    "    # compare accuracies \n",
+    "    for col in ['dirt_road', 'cobblestone_road','asphalt_road']:\n",
+    "        for c in ['cluster_labels_0', 'cluster_labels_1', 'cluster_labels_2']:\n",
+    "            acc = (ll[c] == ll[col]).sum()/len(ll[c])\n",
+    "            print(f'{col} + {c} acc: {acc}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing spectral clustering\n",
+    "X = X_master[::10]\n",
+    "y = labels[::10]\n",
+    "spectral_clustering = SpectralClustering(n_clusters=3, affinity='nearest_neighbors', random_state=42)\n",
+    "y_hat = spectral_clustering.fit_predict(X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dirt_road + cluster_labels_0 acc: 0.7546514856984171\n",
+      "dirt_road + cluster_labels_1 acc: 0.43265759511246876\n",
+      "dirt_road + cluster_labels_2 acc: 0.6330880311024716\n",
+      "cobblestone_road + cluster_labels_0 acc: 0.506248264371008\n",
+      "cobblestone_road + cluster_labels_1 acc: 0.5012496528742016\n",
+      "cobblestone_road + cluster_labels_2 acc: 0.5644959733407386\n",
+      "asphalt_road + cluster_labels_0 acc: 0.6726603721188559\n",
+      "asphalt_road + cluster_labels_1 acc: 0.44494584837545126\n",
+      "asphalt_road + cluster_labels_2 acc: 0.4900027770063871\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bw/hb7ld_394fzb21vx3_dxpyyw0000gn/T/ipykernel_25871/127684231.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  labels['cluster_labels'] = y_hat\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_model(y, y_hat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.mode.chained_assignment = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trying out clustering on cleaned data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['acc_x_dashboard', 'acc_y_dashboard', 'acc_z_dashboard',\n",
+      "       'acc_x_above_suspension', 'acc_y_above_suspension',\n",
+      "       'acc_z_above_suspension', 'acc_x_below_suspension',\n",
+      "       'acc_y_below_suspension', 'acc_z_below_suspension', 'gyro_x_dashboard',\n",
+      "       'gyro_y_dashboard', 'gyro_z_dashboard', 'gyro_x_above_suspension',\n",
+      "       'gyro_y_above_suspension', 'gyro_z_above_suspension',\n",
+      "       'gyro_x_below_suspension', 'gyro_y_below_suspension',\n",
+      "       'gyro_z_below_suspension'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "X = X_master[::10]\n",
+    "print(X.columns)\n",
+    "\n",
+    "# average acceleration \n",
+    "acc_x_cols = ['acc_x_dashboard', 'acc_x_above_suspension', 'acc_x_below_suspension']\n",
+    "acc_y_cols = ['acc_y_dashboard', 'acc_y_above_suspension', 'acc_y_below_suspension']\n",
+    "acc_z_cols = ['acc_z_dashboard', 'acc_z_above_suspension', 'acc_z_below_suspension']\n",
+    "\n",
+    "gyro_x_cols = ['gyro_x_dashboard', 'gyro_x_above_suspension', 'gyro_x_below_suspension']\n",
+    "gyro_y_cols = ['gyro_y_dashboard', 'gyro_y_above_suspension', 'gyro_y_below_suspension']\n",
+    "gyro_z_cols = ['gyro_z_dashboard', 'gyro_z_above_suspension', 'gyro_z_below_suspension']\n",
+    "\n",
+    "X['acc_x'] = X[acc_x_cols].mean(axis=1)\n",
+    "X['acc_y'] = X[acc_y_cols].mean(axis=1)\n",
+    "X['acc_z'] = X[acc_z_cols].mean(axis=1)\n",
+    "\n",
+    "X['gyro_x'] = X[gyro_x_cols].mean(axis=1)\n",
+    "X['gyro_y'] = X[gyro_y_cols].mean(axis=1)\n",
+    "X['gyro_z'] = X[gyro_z_cols].mean(axis=1)\n",
+    "\n",
+    "X = X[['acc_x', 'acc_y', 'acc_z', 'gyro_x', 'gyro_y', 'gyro_z']]\n",
+    "\n",
+    "\n",
+    "# check to see what happens if we take data from the prev 10 windows and post 10 windows \n",
+    "window_size = 10\n",
+    "means = np.zeros((len(X), 6))\n",
+    "stds = np.zeros((len(X), 6))\n",
+    "mins = np.zeros((len(X), 6))\n",
+    "maxs = np.zeros((len(X), 6))\n",
+    "for i in range(len(X)):\n",
+    "    # extract window\n",
+    "\n",
+    "    if i < 10:\n",
+    "        window = X.iloc[0:i+window_size+1]\n",
+    "    elif i > len(X) - 10:\n",
+    "         window = X.iloc[i-window_size:]\n",
+    "    else: \n",
+    "         window = X.iloc[i-window_size:i+window_size+1]\n",
+    "\n",
+    "    window_mean = np.mean(window, axis=0)\n",
+    "    means[i, :] = window_mean.values\n",
+    "\n",
+    "    window_std = np.std(window, axis=0)\n",
+    "    stds[i, :] = window_std.values\n",
+    "\n",
+    "    window_min = np.min(window, axis=0)\n",
+    "    mins[i, :] = window_min.values\n",
+    "\n",
+    "    window_max = np.max(window, axis=0)\n",
+    "    maxs[i, :] = window_max.values\n",
+    "\n",
+    "\n",
+    "X['acc_x_mean'] = means[:, 0]\n",
+    "X['acc_y_mean'] = means[:, 1]\n",
+    "X['acc_z_mean'] = means[:, 2]\n",
+    "X['gyro_x_mean'] = means[:, 3]\n",
+    "X['gyro_y_mean'] = means[:, 4]\n",
+    "X['gyro_z_mean'] = means[:, 5]\n",
+    "\n",
+    "X['acc_x_std'] = stds[:, 0]\n",
+    "X['acc_y_std'] = stds[:, 1]\n",
+    "X['acc_z_std'] = stds[:, 2]\n",
+    "X['gyro_x_std'] = stds[:, 3]\n",
+    "X['gyro_y_std'] = stds[:, 4]\n",
+    "X['gyro_z_std'] = stds[:, 5]\n",
+    "\n",
+    "X['acc_x_min'] = mins[:, 0]\n",
+    "X['acc_y_min'] = mins[:, 1]\n",
+    "X['acc_z_min'] = mins[:, 2]\n",
+    "X['gyro_x_min'] = mins[:, 3]\n",
+    "X['gyro_y_min'] = mins[:, 4]\n",
+    "X['gyro_z_min'] = mins[:, 5]\n",
+    "\n",
+    "X['acc_x_max'] = maxs[:, 0]\n",
+    "X['acc_y_max'] = maxs[:, 1]\n",
+    "X['acc_z_max'] = maxs[:, 2]\n",
+    "X['gyro_x_max'] = maxs[:, 3]\n",
+    "X['gyro_y_max'] = maxs[:, 4]\n",
+    "X['gyro_z_max'] = maxs[:, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.10/site-packages/sklearn/manifold/_spectral_embedding.py:274: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dirt_road + cluster_labels_0 acc: 0.20098583726742572\n",
+      "dirt_road + cluster_labels_1 acc: 0.8005415162454874\n",
+      "dirt_road + cluster_labels_2 acc: 0.8188697584004443\n",
+      "cobblestone_road + cluster_labels_0 acc: 0.44675090252707583\n",
+      "cobblestone_road + cluster_labels_1 acc: 0.5547764509858373\n",
+      "cobblestone_road + cluster_labels_2 acc: 0.5704665370730353\n",
+      "asphalt_road + cluster_labels_0 acc: 0.37364620938628157\n",
+      "asphalt_road + cluster_labels_1 acc: 0.6248264371008053\n",
+      "asphalt_road + cluster_labels_2 acc: 0.6091363510136073\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try spectral clustering to predict type of road\n",
+    "y = labels[::10]\n",
+    "spectral_clustering = SpectralClustering(n_clusters=3, affinity='nearest_neighbors', random_state=42)\n",
+    "y_hat = spectral_clustering.fit_predict(X)\n",
+    "eval_model(y, y_hat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dirt_road + cluster_labels_0 acc: 0.6559289086364899\n",
+      "dirt_road + cluster_labels_1 acc: 0.5435295751180228\n",
+      "dirt_road + cluster_labels_2 acc: 0.6209386281588448\n",
+      "cobblestone_road + cluster_labels_0 acc: 0.6146903637878367\n",
+      "cobblestone_road + cluster_labels_1 acc: 0.36441266314912524\n",
+      "cobblestone_road + cluster_labels_2 acc: 0.5928908636489864\n",
+      "asphalt_road + cluster_labels_0 acc: 0.431477367397945\n",
+      "asphalt_road + cluster_labels_1 acc: 0.7424326575951125\n",
+      "asphalt_road + cluster_labels_2 acc: 0.4336989725076368\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try spectral clustering to predict type of road\n",
+    "y = labels[::10]\n",
+    "kmeans = KMeans(n_clusters=3)\n",
+    "y_hat = kmeans.fit(X).predict(X)\n",
+    "eval_model(y, y_hat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "testing cleaned data to predict paved vs unpaved roads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.10/site-packages/sklearn/manifold/_spectral_embedding.py:274: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "paved_road + cluster_labels_0 acc: 0.8188697584004443\n",
+      "paved_road + cluster_labels_1 acc: 0.18113024159955568\n",
+      "unpaved_road + cluster_labels_0 acc: 0.18113024159955568\n",
+      "unpaved_road + cluster_labels_1 acc: 0.8188697584004443\n"
+     ]
+    }
+   ],
+   "source": [
+    "# spectral clustering \n",
+    "y = labels[::10]\n",
+    "spectral_clustering = SpectralClustering(n_clusters=2, affinity='nearest_neighbors', random_state=42)\n",
+    "y_hat = spectral_clustering.fit_predict(X)\n",
+    "\n",
+    "# extract y actual\n",
+    "y['cluster_labels'] = y_hat\n",
+    "ll = pd.get_dummies(y,columns=['cluster_labels'])\n",
+    "\n",
+    "# compare accuracies \n",
+    "for col in ['paved_road', 'unpaved_road']:\n",
+    "    for c in ['cluster_labels_0', 'cluster_labels_1']:\n",
+    "        acc = (ll[c] == ll[col]).sum()/len(ll[c])\n",
+    "        print(f'{col} + {c} acc: {acc}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "paved_road + cluster_labels_0 acc: 0.5013885031935573\n",
+      "paved_road + cluster_labels_1 acc: 0.4986114968064427\n",
+      "unpaved_road + cluster_labels_0 acc: 0.4986114968064427\n",
+      "unpaved_road + cluster_labels_1 acc: 0.5013885031935573\n"
+     ]
+    }
+   ],
+   "source": [
+    "# kmeans\n",
+    "y = labels[::10]\n",
+    "kmeans = KMeans(n_clusters=2)\n",
+    "y_hat = kmeans.fit(X).predict(X)\n",
+    "\n",
+    "# extract y actual\n",
+    "y['cluster_labels'] = y_hat\n",
+    "ll = pd.get_dummies(y,columns=['cluster_labels'])\n",
+    "\n",
+    "# compare accuracies \n",
+    "for col in ['paved_road', 'unpaved_road']:\n",
+    "    for c in ['cluster_labels_0', 'cluster_labels_1']:\n",
+    "        acc = (ll[c] == ll[col]).sum()/len(ll[c])\n",
+    "        print(f'{col} + {c} acc: {acc}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['paved_road', 'unpaved_road', 'dirt_road', 'cobblestone_road',\n",
+       "       'asphalt_road', 'no_speed_bump', 'speed_bump_asphalt',\n",
+       "       'speed_bump_cobblestone', 'good_road_left', 'regular_road_left',\n",
+       "       'bad_road_left', 'good_road_right', 'regular_road_right',\n",
+       "       'bad_road_right', 'cluster_labels'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels.columns"
    ]
   },
   {
